--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-standard": "5.0.0",
+    "mime-types": "2.1.34",
     "prettier": "2.5.1",
     "ts-node": "10.4.0",
     "typescript": "4.5.4"
